tests/cases/errors/unsupported_unpacked_union/main.sv
module Top;
  union { int a; int b; } u;
endmodule
